--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pandas = "*"
 sqlalchemy = "*"
 ipython = "*"
 fire = "*"
+python-language-server = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
